--- a/LibraryManagement/app/src/main/AndroidManifest.xml
+++ b/LibraryManagement/app/src/main/AndroidManifest.xml
@@ -14,8 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="fpt.edu.vn.librarymanagement.activities.BookListActivity"
-            android:label="@string/app_name">
+            android:name=".activities.BookListActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".activities.BookDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.LoadActivity"
+            android:label="@string/title_activity_load"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +30,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="fpt.edu.vn.librarymanagement.activities.BookDetailActivity"
-            android:screenOrientation="portrait" />
+            android:name=".WebViewAcivity"
+            android:label="@string/title_activity_web_view_acivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
